After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 634555 - jhbuild gnome-shell fail due to libgnome-ui change
jhbuild gnome-shell fail due to libgnome-ui change
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: building
unspecified
Other Linux
: Normal blocker
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2010-11-10 23:16 UTC by Diska
Modified: 2010-11-11 00:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
st-texture-cache: Fix include (872 bytes, patch)
2010-11-11 00:43 UTC, Florian Müllner
committed Details | Review

Description Diska 2010-11-10 23:16:20 UTC
please update code to work with this change

http://git.gnome.org/browse/gnome-desktop/commit/?id=db82a33c6ed33c8ccfbb2f138da2a18bd73b2334
Comment 1 Florian Müllner 2010-11-10 23:31:38 UTC
Can you please provide information about what exactly is failing on your system? I am unaware of any reports of build issues related to the commit pointed out by you. GNOME Shell certainly builds and runs on my system.
Comment 2 Florian Müllner 2010-11-11 00:43:12 UTC
Created attachment 174221 [details] [review]
st-texture-cache: Fix include

The file gnome-desktop-thumbnail.h was moved from libgnomeui to
libgnome-desktop.

Sorry, I had a copy of the file in the old location, so the API break did not bite.
Comment 3 Florian Müllner 2010-11-11 00:43:59 UTC
Attachment 174221 [details] pushed as ad624d5 - st-texture-cache: Fix include